@@ -1,3 +1,7 @@
+2006-05-26  Richard Sandiford  <richard@codesourcery.com>
+
+	* m68k.h (mcf_mask): Define.
+
 2006-04-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* avr.h (AVR_ISA_PWMx): New.
